Fix ambiguous shortcut warning when pressing save shortcuts

Summary:
When {nav Remember last used save mode} is enabled, pressing
{key Ctrl S} or {key Ctrl Shift S} repeatedly would result in a
ambiguous shortcut warning dialog.

This is because on every save the action was re-added to the dropdown
button, resulting in multiple shortcuts. It should be enough to set the
actions once, and then only swap the default action.

BUG: 389691

Depends on D10468
Ref T7841

Test Plan:
Press {key Ctrl S} twice, no warning dialog is shown anymore.
Both {nav Save} options still work as before and the last-used button is
set as the default.

Reviewers: #spectacle, ngraham

Reviewed By: #spectacle, ngraham

Subscribers: ngraham

Maniphest Tasks: T7841

Differential Revision: https://phabricator.kde.org/D10469